--- a/catalog-info.yml
+++ b/catalog-info.yml
@@ -1,5 +1,5 @@
 apiVersion: backstage.io/v1alpha1
-kind: Component
+kind: api
 metadata:
   name: shuffle-api-1
   description: Shuffle API 1
@@ -8,7 +8,7 @@ metadata:
 spec:
   type: service
   lifecycle: production
-  owner: user:guest
+  owner: asaf
   system: audio-playback
   definition: |
     info:
