--- a/catalog-info.yml
+++ b/catalog-info.yml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: <github-repo>
-  title:v.0.01
+  title:v1.0.0
   description: My first Backstage catalog item.
   annotations:
     github.com/project-slug: <github-org>/<github-repo>
