--- a/catalog-info.yml
+++ b/catalog-info.yml
@@ -1,12 +1,22 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: test-1
-  title: test-1
- 
-  description: My first Backstage catalog item.
+  name: artist-web
+  description: The place to be, for great artists
+  labels:
+    example.com/custom: custom_label_value
+  annotations:
+    example.com/service-discovery: artistweb
+    circleci.com/project-slug: github/example-org/artist-website
+  tags:
+    - v1.0.0
+  links:
+    - url: https://admin.example-org.com
+      title: Admin Dashboard
+      icon: dashboard
 spec:
-  type: service
-  owner: user:asaf
-  lifecycle: experimental
-  tag : v1.0.0
+  type: website
+  lifecycle: production
+  owner: artist-relations-team
+  system: public-websites
+
