--- a/catalog-info.yml
+++ b/catalog-info.yml
@@ -2,7 +2,7 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: artist-web
-  description: v1.0.0
+  Version: v1.0.0
   labels:
     example.com/custom: custom_label_value
   annotations:
